--- a/webapp/assets/styles.css
+++ b/webapp/assets/styles.css
@@ -142,6 +142,8 @@ body,
   display: none;
   z-index: 2000;
 }
+.toc.hidden { display: none; }
+.toc.show { display: block; }
 .toc .toc-inner {
   position: absolute;
   left: 0;
