--- a/webapp/assets/styles.css
+++ b/webapp/assets/styles.css
@@ -268,22 +268,24 @@ body,
 }
 @keyframes flipIn {
   from {
-    transform: rotateY(-90deg);
-    opacity: 0.2;
+    transform: rotateY(-90deg) translateZ(0);
+    transform-origin: right center;
+    opacity: 0.15;
   }
   to {
-    transform: rotateY(0);
+    transform: rotateY(0) translateZ(0);
     opacity: 1;
   }
 }
 @keyframes flipOut {
   from {
-    transform: rotateY(0);
+    transform: rotateY(0) translateZ(0);
     opacity: 1;
   }
   to {
-    transform: rotateY(90deg);
-    opacity: 0.2;
+    transform: rotateY(90deg) translateZ(0);
+    transform-origin: left center;
+    opacity: 0.15;
   }
 }
 
